# vehicle-design-train

./: README.md  main.py  pyproject.toml
config/: eval_prompts.json  validation_prompts.json
data/: eval_specs.jsonl
scripts/: launch_train_sd3.sh  launch_train_sd3_grpo.sh  launch_train_sdxl.sh  launch_train_sdxl_2gpu.sh  launch_train_sdxl_grpo.sh  launch_vllm_qwen35_grpo_vqa.sh
vehicle_design_train/: __init__.py  eval_grid.py  eval_metrics.py  grpo_dataset.py  grpo_eval_specs.py  jsonl_dataset.py  token_stats.py  train_sd3_grpo.py  train_sd3_lora.py  train_sdxl_grpo.py  train_sdxl_lora.py
vehicle_design_train/grpo/: __init__.py  ddim_logprob.py  ddp_utils.py  group_advantage.py  sd3_flow_grpo_loss.py  sd3_rollout.py  sd3_sde_with_logprob.py  sdxl_ddpo_loss.py  sdxl_rollout.py
vehicle_design_train/rewards/: __init__.py  composite.py  geneval_remote_scorer.py  imagereward_scorer.py  pickscore_scorer.py  vqa_common.py  vqa_prob_scorer.py  vqa_vllm_scorer.py
